<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#455A64"
        android:orientation="vertical">

        <!--Initial screen of the quiz-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/black_panther_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/blackpanthertophalf" />

            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="140sp"
                android:layout_marginTop="9dp"
                android:text="@string/welcome"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/second_line_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/black_panther_image"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/intro"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/scroll_down"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/second_line_description"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/scroll_down"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

        </RelativeLayout>

        <!-- First question of quiz -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/blackpantheravengers" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/first_question"
                android:textColor="#CFD8DC"
                android:textSize="35sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/firstRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp">

                <RadioButton
                    android:id="@+id/answerA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:onClick="radioQuestion"
                    android:text="@string/first_question_a"
                    android:textColor="#CFD8DC"
                    android:textSize="25sp" />

                <RadioButton
                    android:id="@+id/answerB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:onClick="radioQuestion"
                    android:text="@string/first_question_b"
                    android:textColor="#CFD8DC"
                    android:textSize="25sp" />

                <RadioButton
                    android:id="@+id/answerC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:onClick="radioQuestion"
                    android:text="@string/first_question_c"
                    android:textColor="#CFD8DC"
                    android:textSize="25sp" />

                <!--Correct answer -->

                <RadioButton
                    android:id="@+id/answerD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:onClick="radioQuestion"
                    android:text="@string/first_question_d"
                    android:textColor="#CFD8DC"
                    android:textSize="25sp" />

            </RadioGroup>

        </LinearLayout>

        <!-- Second question of quiz -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/blackpantherandteam" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/second_question"
                android:textColor="#CFD8DC"
                android:textSize="35sp"
                android:textStyle="bold" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <!-- Should be selected -->
                <CheckBox
                    android:id="@+id/avengers_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/second_question_a"
                    android:textColor="#CFD8DC"
                    android:textSize="25sp" />

                <!-- Should be selected -->
                <CheckBox
                    android:id="@+id/fantastic_four_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/avengers_checkbox"
                    android:layout_marginLeft="10dp"
                    android:text="@string/second_question_b"
                    android:textColor="#CFD8DC"
                    android:textSize="25sp" />

                <CheckBox
                    android:id="@+id/x_men_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/fantastic_four_checkbox"
                    android:layout_marginLeft="10dp"
                    android:text="@string/second_question_c"
                    android:textColor="#CFD8DC"
                    android:textSize="25sp" />

                <!-- Should be selected -->
                <CheckBox
                    android:id="@+id/illuminati_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/x_men_checkbox"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/second_question_d"
                    android:textColor="#CFD8DC"
                    android:textSize="25sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:onClick="checkingBoxes"
                    android:text="@string/submit_button" />

            </RelativeLayout>


        </LinearLayout>

        <!-- Third question of quiz -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/lupita" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/third_question"
                android:textColor="#CFD8DC"
                android:textSize="35sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp">

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="16dp"
                    android:onClick="decrement"
                    android:text="-" />

                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="205"
                    android:textColor="#CFD8DC"
                    android:textSize="40sp" />

                <!-- Correct answer is 202 million -->

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="increment"
                    android:text="+" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/third_question_dollars"
                    android:textColor="#CFD8DC"
                    android:textSize="18sp" />

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="checkingBoxOffice"
                android:text="@string/submit_button"
                android:layout_marginBottom="15dp"/>


        </LinearLayout>

        <!-- Fourth question of quiz -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/shuri" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/fourth_question"
                android:textColor="#CFD8DC"
                android:textSize="35sp"
                android:textStyle="bold" />

            <!--Correct name is Shuri-->

            <EditText
                android:id="@+id/blackpanthersister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/fourth_question_hint"
                android:inputType="text"
                android:textColor="#CFD8DC"
                android:textColorHint="#CFD8DC" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:onClick="isNameRight"
                android:text="@string/submit_button"
                android:layout_marginBottom="15dp"/>

        </LinearLayout>


    </LinearLayout>


</ScrollView>